5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1832_1654.log
== TEST (2019-06-13 18:28:45) 
-- CODE:
from numpy import*
vet=array(eval(input("digite o vetor:  ")))
print(sort(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:29:00) 
-- CODE:
from numpy import*
vet=array(eval(input("digite o vetor:  ")))
print(sort(vet))
-- EXECUTION TIME:
0.998231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1654/main.py", line 2, in <module>
    vet=array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'PE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:29:28) 
-- CODE:
from numpy import*
vet=array(eval(input("estados:  ")))
print(sort(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:29:35) 
-- CODE:
from numpy import*
vet=array(eval(input("estados:  ")))
print(sort(vet))
-- EXECUTION TIME:
0.753078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1654/main.py", line 2, in <module>
    vet=array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'PE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
